--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dotfiles-manjaro-i3"]
 	path = dotfiles-manjaro-i3
 	url = https://github.com/BondarenkoArtur/dotfiles-manjaro-i3
+[submodule "dotfiles/dotbot"]
+	path = dotfiles/dotbot
+	url = https://github.com/anishathalye/dotbot
