--- a/dotfiles/install.conf.yaml
+++ b/dotfiles/install.conf.yaml
@@ -21,7 +21,7 @@
     # ~/.config/polybar: config/polybar
     # ~/.config/redshift.conf: config/redshift.conf
     # ~/.config/volumeicon: config/volumeicon
-    # ~/.i3: i3
+    ~/.config/i3: i3
     # ~/.localrc: localrc
     # ~/.oh-my-zsh/custom/git_custom.zsh: oh-my-zsh/custom/git_custom.zsh
     # ~/.oh-my-zsh/custom/plugins/fcote: oh-my-zsh/custom/plugins/fcote
